2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/site/config.py:
	Added Manager host/port configuration.

	Added Site support (moved from attributes of chimera to indidual
	tag with normal subtags).

	* src/chimera/controllers/site/main.py:
	Fix prefix bug.
	Added dry-run mode.
	Added support for Site object creation based on config.py parsing.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/util/coord.py:
	Much more documentation.

	Add support for rich operators (<, <=, >, >=, ==, != and mod).

	Add the much needed strfcoord function on CoordUtil and method on
	Coord. hms2str and dms2str are now based on this function.

	Fix "excess of generality" on Coord RE. Our RE are too general
	that some strange string was being accepted as valid Coord (see
	test_coord.py for examples)

	* src/chimera/util/position.py: New class. A simple Position (a
	tuple of Coords) class. It used astrolib Position as base to
	inherites angsep and some other usefull things and the amazing TPM
	library support. Hope to expand this class and make more use of
	TPM in the future.

	* src/chimera/util/tests/test_position.py: Test Position basic
	functionality.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/util/filenamesequence.py: New. Very useful class to
	implement automatic sequence number generation. Mostly used to
	generate new index to image filenames (used in ImageSave).

	* src/chimera/util/imagesave.py: New. All image saving blocks from
	sbig.py was moved to a self contained class to allow reuse. Use
	it!

	* src/chimera/util/imagesave.py: New. Mostly a stub for future
	telescope software limits support.

	* src/chimera/util/enum.py: Add support for equality tests on
	different Enum objects (copied for whatever reasons).

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/sbigdrv.py: Converted to use Exceptions.

	* src/chimera/drivers/sbig.py: